force-app/main/default/objects/Marketing_Cloud_Preferences__c/Marketing_Cloud_Preferences__c.object-meta.xml
<CustomObject>
    <label>Marketing Cloud Preferences</label>
    <nameField>
        <displayFormat>MAP-{00000000}</displayFormat>
        <label>Marketing Cloud Preferences Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Cloud Preferences</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>