force-app/main/default/objects/Marketing_Cloud_Preferences__c/fields/AccountID__c.field-meta.xml
<CustomField>
    <fullName>AccountID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>AccountID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Marketing Cloud Preferences</relationshipLabel>
    <relationshipName>Account</relationshipName>
    <type>Lookup</type>
</CustomField>