force-app/main/default/objects/Marketing_Cloud_Preferences__c/fields/ContactID__c.field-meta.xml
<CustomField>
    <fullName>ContactID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContactID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Marketing Cloud Preferences</relationshipLabel>
    <relationshipName>Contact</relationshipName>
    <type>Lookup</type>
</CustomField>