force-app/main/default/objects/Marketing_Cloud_Preferences__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <label>Destination</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>South Pacific</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Africa</fullName>
            </value>
            <value>
                <fullName>Australia &amp; NZ</fullName>
            </value>
            <value>
                <fullName>Central America</fullName>
            </value>
            <value>
                <fullName>Mediterranean</fullName>
            </value>
            <value>
                <fullName>Middle East</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>South America</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>