force-app/main/default/objects/Marketing_Cloud_Preferences__c/fields/LeadID__c.field-meta.xml
<CustomField>
    <fullName>LeadID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LeadID</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Marketing Cloud Preferences</relationshipLabel>
    <relationshipName>Lead</relationshipName>
    <type>Lookup</type>
</CustomField>