force-app/main/default/objects/Marketing_Cloud_Preferences__c/fields/Travel_Preference_Flights__c.field-meta.xml
<CustomField>
    <fullName>Travel_Preference_Flights__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travel Preference Flights</label>
    <type>Checkbox</type>
</CustomField>