force-app/main/default/objects/Marketing_Cloud_Preferences__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LeadID__c</columns>
    <columns>AccountID__c</columns>
    <columns>ContactID__c</columns>
    <columns>Travel_Preference_Cruise__c</columns>
    <columns>Travel_Preference_Escape__c</columns>
    <columns>Travel_Preference_Flights__c</columns>
    <columns>Travel_Preference_Rail__c</columns>
    <columns>Travel_Preference_Tour__c</columns>
    <columns>Destination__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Travel_Preference_Cruise__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>